--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/f/mwkavwjj" method="POST">
+                    <form action="https://formspree.io/irinebabu2000@gmail.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
