--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <p class="mb-0"><strong>Phone</strong></p>
                     <p class="pb-2">8921284945</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>irinebabu2000.com</p>
+                    <p>irinebabu2000@gmail.com</p>
                   </div>
                 </div>
               </div>
