--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div class="card-body">
 
 
-            <p>Passed with 89% from CISCE board from St.Joseph's Model Public School,Kuriachira</p>
+            <p>Passed with 89% from St.Joseph's Model Public School(CISCE),Kuriachira</p>
           </div>
         </div>
       </div>
@@ -161,7 +161,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Biology and Mathematics</div
-            <p>Passed with 86% from CBSE board from St.Paul's Public School,Kuriachira</p>
+            <p>Passed with 86% from St.Paul's Public School(CBSE),Kuriachira</p>
           </div>
         </div>
       </div>
