--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/comp.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('comp.jpg')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images\WhatsApp Image 2021-05-03 at 8.12.54 PM (1).jpg" alt="Image"/></a></div>
